# single-page-fitness-viewer

./: .gitignore  QUICK_START.md  README.md  TESTING.md  TEST_IMPLEMENTATION.md  build-bundle.py  build-offline.sh  conftest.py  pyproject.toml  pytest.ini  single-page-bundled.html  single-page-d3-bundled.html  single-page-d3.html  single-page-local.html  test_activity_viewer.py
test-cases/bundled/: index.html
test-cases/bundled-d3/: index.html
test-cases/full-activity/: index.html
test-cases/full-activity-d3/: index.html
